latex table compat

--- a/evals.ipynb
+++ b/evals.ipynb
@@ -510,6 +510,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_latex_table(data):\n",
+    "\n",
+    "    header = r\"\"\"\\begin{table*}[h!]\n",
+    "    \\centering\n",
+    "    \\caption{Model Performance Metrics}\n",
+    "    \\label{tab:performance}\n",
+    "    \\begin{tabularx}{\\textwidth}{l X c c c}\n",
+    "        \\toprule\n",
+    "        \\textbf{ID} & \\textbf{Hyperparameters} & \\textbf{MCC} & \\textbf{F1 (Weighted)} & \\textbf{F1 (Macro)} \\\\\n",
+    "        \\midrule\"\"\"\n",
+    "\n",
+    "    rows = []\n",
+    "    for entry in data:\n",
+    "        # IDs and params go inside \\detokenize\n",
+    "        param_id = entry['param_id']\n",
+    "        params_str = str(entry['params'])\n",
+    "\n",
+    "        id_tex = f\"\\\\texttt{{\\\\detokenize{{{param_id}}}}}\"\n",
+    "        params_tex = f\"\\\\texttt{{\\\\detokenize{{{params_str}}}}}\"\n",
+    "\n",
+    "        # metrics\n",
+    "        mcc_str = f\"${entry['mean_mcc']:.4f} \\\\pm {entry['std_mcc']:.4f}$\"\n",
+    "\n",
+    "        # handle possible misspelling of 'weighted'\n",
+    "        mean_f1_w = entry.get('mean_f1_weighted', entry.get('mean_f1_weigthed'))\n",
+    "        std_f1_w = entry.get('std_f1_weighted', entry.get('std_f1_weigthed'))\n",
+    "        f1_w_str = f\"${mean_f1_w:.4f} \\\\pm {std_f1_w:.4f}$\"\n",
+    "\n",
+    "        f1_m_str = f\"${entry['mean_f1_macro']:.4f} \\\\pm {entry['std_f1_macro']:.4f}$\"\n",
+    "\n",
+    "        row = f\"        {id_tex} & {params_tex} & {mcc_str} & {f1_w_str} & {f1_m_str} \\\\\\\\ \\n        \\\\specialrule{{0.04em}}{{0pt}}{{0pt}}\"\n",
+    "        rows.append(row)\n",
+    "\n",
+    "    footer = r\"\"\"\n",
+    "        \\bottomrule\n",
+    "    \\end{tabularx}\n",
+    "\\end{table*}\"\"\"\n",
+    "\n",
+    "    table_body = \"\\n\".join(rows)\n",
+    "    return f\"{header}\\n{table_body}\\n{footer}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
