--- a/evals.ipynb
+++ b/evals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,13 @@
     "from autorank import autorank, plot_stats\n",
     "import io\n",
     "from contextlib import redirect_stdout\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,12 +148,14 @@
     "    plt.title(f'Critical Distance plot based on {metrics_dict[metric]}')\n",
     "    plt.show()\n",
     "\n",
-    "    print_summaries(sort_results(both, metric))"
+    "    out1 = sort_results(both, metric)\n",
+    "    print_summaries(out1)\n",
+    "    return out1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -316,12 +319,12 @@
     }
    ],
    "source": [
-    "stat_tests(knn_results, dt_results, all_results, 'mcc')"
+    "mcc = stat_tests(knn_results, dt_results, all_results, 'mcc', signifigance_level=0.05)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -412,12 +415,12 @@
     }
    ],
    "source": [
-    "stat_tests(knn_results, dt_results, all_results, 'f1_weigthed')"
+    "f1w = stat_tests(knn_results, dt_results, all_results, 'f1_weigthed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -508,12 +511,12 @@
     }
    ],
    "source": [
-    "stat_tests(knn_results, dt_results, all_results, 'f1_macro')"
+    "f1m = stat_tests(knn_results, dt_results, all_results, 'f1_macro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +550,7 @@
     "\n",
     "        f1_m_str = f\"${entry['mean_f1_macro']:.4f} \\\\pm {entry['std_f1_macro']:.4f}$\"\n",
     "\n",
-    "        row = f\"        {id_tex} & {params_tex} & {mcc_str} & {f1_w_str} & {f1_m_str} \\\\\\\\ \\n        \\\\specialrule{{0.04em}}{{0pt}}{{0pt}}\"\n",
+    "        row = f\"        {id_tex} & {params_tex} & {mcc_str} & {f1_w_str} & {f1_m_str} \\\\\\\\ \\n        \\\\specialrule{{0.04em}}{{0.25em}}{{0.25em}}\"\n",
     "        rows.append(row)\n",
     "\n",
     "    footer = r\"\"\"\n",
